--- a/Assignments/HW3_Vocoders/index.html
+++ b/Assignments/HW3_Vocoders/index.html
@@ -504,6 +504,10 @@
 											One interesting "synesthetic" application that phase retrieval unlocks is that we can turn images into audio by taking any grayscale image and considering it a magnitude only specification of an STFT.  If we apply phase retrieval, we can then fill in the phases for a sound whose absolute value STFT would match the specified image.
 										</p>
 
+										<p>
+											<b>NOTE: </b> John Muller pointed out that Aphex Twin has a song <a href = "https://en.wikipedia.org/wiki/Windowlicker#Spectrogram">where they actually do this</a>!
+										</p>
+
 										<h3>Example 1: 1-Pixel Trajectory</h3>
 										<p>
 											Let's suppose we have the following image, in which a single pixel is lit up and moves around the frequency axis over time.
