--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@
 											<h4>
 												<ul>
 													<li>
-														Monday/Wednesday 4PM - 5PM in <a href = "https://www.ursinus.edu/live/profiles/4107-pfahler-hall-room-107">Pfahler 107</a>
+														Monday/Wednesday 3:30PM - 5PM
 													</li>
 													<li>
-														Wednesday/Friday 10AM - 11AM in <b>Pfahler 001</b> (Note the location change!)
+														Friday 10AM - 11AM
 													</li>
 													<li>
-														Tuesday 12PM - 1PM virtually on <a href = "#discord">Discord</a>
+														Tuesday 7PM - 9PM virtually, by appointment
 													</li>
 												</ul>
 											</h4>
@@ -451,43 +451,66 @@
 <!-- Begin Schedule -->
 <tr><td colspan = "5"><h2><b><a name = "timedomain">Unit 1: Time Domain Audio Processing</a></b></h2><p></p></td></tr>
 <tr><td>1</td><td>Wed 1/18/2023</td><td>Course Overview, Sneak Preview, Digital Audio Representations</td><td><ul><li>Audio Reverse Game</li></ul></td><td></td></tr>
-<tr><td>2</td><td>Fri 1/20/2023</td><td>Python/Numpy Basics, Slicing/Reversing Audio, Sinusoids/Pitch</td><td><ul><a href = "https://donsheehy.github.io/datastructures/fullbook.pdf">Sheehy</a> Ch. 2 for python intro</li></ul></td><td></td></tr>
-<tr><td>3</td><td>Mon 1/23/2023</td><td>Square Waves, Triangle Waves, Sawtooth Waves, Noise, Beat Frequencies</td><td><ul><li></li></ul></td><td></td></tr>
-<tr><td>4</td><td>Wed 1/25/2023</td><td>Octaves, Harmonicity, Circle of Fifths / Pythagorean Tuning</td><td><ul><li><a href = "ClassExercises/Week2/Week2_Harmonicity">Harmonicity Notes</a></li><li><a href = "https://en.wikipedia.org/wiki/Pythagorean_comma">Wikipedia Notes on The Pythagorean Comma</a></li></ul></td><td></td></tr>
-<tr><td>5</td><td>Fri 1/27/2023</td><td>Finish Pythagorean Tuning, Chirps, Vibrato, Frequency Sonification</td><td></td><td></td></tr>
-<tr><td>6</td><td>Mon 1/30/2023</td><td>Zero Crossings, Consonant/Vowel Filtering, Dynamics, Intensity, Loudness</td><td></td><td></td></tr>
+<tr><td>2</td><td>Fri 1/20/2023</td><td>Python/Numpy Basics, Slicing/Reversing Audio, Sinusoids/Pitch</td><td><ul><a href = "https://donsheehy.github.io/datastructures/fullbook.pdf">Sheehy</a> Ch. 2 for python intro</li></ul></td><td bgcolor=#f4e6e7>Module 1: Python Basics Due by 11:59 PM
+</td></tr>
+<tr><td>3</td><td>Mon 1/23/2023</td><td>Square Waves, Triangle Waves, Sawtooth Waves, Noise, Beat Frequencies</td><td><ul><li></li></ul></td><td bgcolor=#f4e6e7>Module 2: Sinusoids And Simple Numpy Tunes Due Before Class
+<HR>Assignment 1: Risset Beats Out
+</td></tr>
+<tr><td>4</td><td>Wed 1/25/2023</td><td>Octaves, Harmonicity, Circle of Fifths / Pythagorean Tuning</td><td><ul><li><a href = "ClassExercises/Week2/Week2_Harmonicity">Harmonicity Notes</a></li><li><a href = "https://en.wikipedia.org/wiki/Pythagorean_comma">Wikipedia Notes on The Pythagorean Comma</a></li></ul></td><td bgcolor=#f4e6e7>Module 3: Standing Waves And Plucked String Synthesis Due Before Class 
+</td></tr>
+<tr><td>5</td><td>Fri 1/27/2023</td><td>Finish Pythagorean Tuning, Chirps, Vibrato, Frequency Sonification</td><td></td><td bgcolor=#f4e6e7>Module 4: Chirps, Instantaneous Frequency due before class 
+</td></tr>
+<tr><td>6</td><td>Mon 1/30/2023</td><td>Zero Crossings, Consonant/Vowel Filtering, Dynamics, Intensity, Loudness</td><td></td><td bgcolor=#f4e6e7>Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics due before class
+</td></tr>
 <tr><td>7</td><td>Wed 2/1/2023</td><td>HW1: Risset Beats Q&A, Work Day</td><td><ul><li><a href = "Assignments/HW1_RissetBeats/HappyBirthdaySquareWaves.html">Happy Birthday Square Waves</a></li><li><a href = "Assignments/HW1_RissetBeats/PhaseAggregation.html">Phase Aggregation (Part 2) Notes</a></li> </ul></td><td></td></tr>
-<tr><td>8</td><td>Fri 2/3/2023</td><td>Timbre, FM Synthesis, ADSR</td><td><ul><li><a href = "https://web.eecs.umich.edu/~fessler/course/100/misc/chowning-73-tso.pdf">John Chowning's 1973 paper on FM synthesis</a></li><li><a href = "https://en.wikipedia.org/wiki/Yamaha_DX7">Yamaha DX7</a></li><li><a href = "https://ccrma.stanford.edu/">Stanford CCRMA</a></li></ul></td><td></td></tr>
-<tr><td>9</td><td>Mon 2/6/2023</td><td>Echoes / Impulse Responses / Convolution</td><td><ul><li><a href = "http://www.echothief.com/">Echo Thief</a><li><a href = "https://www.youtube.com/watch?v=aT2YGXxYx-w">Impluse response of a nuclear power plant</a></li></ul></td><td></td></tr>
+<tr><td></td><td>Thu 2/2/2023</td><td></td><td></td><td bgcolor=#f4e6e7>Assignment 1 Due
+</td></tr><tr><td>8</td><td>Fri 2/3/2023</td><td>Timbre, FM Synthesis, ADSR</td><td><ul><li><a href = "https://web.eecs.umich.edu/~fessler/course/100/misc/chowning-73-tso.pdf">John Chowning's 1973 paper on FM synthesis</a></li><li><a href = "https://en.wikipedia.org/wiki/Yamaha_DX7">Yamaha DX7</a></li><li><a href = "https://ccrma.stanford.edu/">Stanford CCRMA</a></li></ul></td><td bgcolor=#f4e6e7>Module 6: Timbre, FM Synthesis, Python Methods As Parameters (Optional, but will help with HW2)
+<HR>Assignment 2: Digital Instruments Out 
+</td></tr>
+<tr><td>9</td><td>Mon 2/6/2023</td><td>Echoes / Impulse Responses / Convolution</td><td><ul><li><a href = "http://www.echothief.com/">Echo Thief</a><li><a href = "https://www.youtube.com/watch?v=aT2YGXxYx-w">Impluse response of a nuclear power plant</a></li></ul></td><td bgcolor=#f4e6e7>Module 7: Echoes, Impulse Responses, And Convolution due before class 
+</td></tr>
 <tr><td>10</td><td>Wed 2/8/2023</td><td>Comb Filters</td><td></td><td></td></tr>
 <tr><td colspan = "5"><h2><b><a name = "freqdomain">Unit 2: Frequency Domain Audio Processing</a></b></h2><p></p></td></tr>
-<tr><td>11</td><td>Fri 2/10/2023</td><td>Discovering The Discrete Fourier Transform (DFT)</td><td></td><td></td></tr>
-<tr><td>12</td><td>Mon 2/13/2023</td><td>Real-Valued DFT Definition, Amplitude/Phase Shifts</td><td></td><td></td></tr>
-<tr><td>13</td><td>Wed 2/15/2023</td><td>Exploring The DFT on Audio Data: Pitch And Timbre</td><td></td><td></td></tr>
-<tr><td>14</td><td>Fri 2/17/2023</td><td>The Short-Time Fourier Transform (STFT), Spectrograms</td><td></td><td></td></tr>
+<tr><td>11</td><td>Fri 2/10/2023</td><td>Discovering The Discrete Fourier Transform (DFT)</td><td></td><td bgcolor=#f4e6e7>Module 8: Discovering The Fourier Transform due before class 
+</td></tr>
+<tr><td>12</td><td>Mon 2/13/2023</td><td>Real-Valued DFT Definition, Amplitude/Phase Shifts</td><td></td><td bgcolor=#f4e6e7>Module 8b: Implement The Discrete Fourier Transform due before class 
+</td></tr>
+<tr><td>13</td><td>Wed 2/15/2023</td><td>Exploring The DFT on Audio Data: Pitch And Timbre</td><td></td><td bgcolor=#f4e6e7>Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase due before class 
+</td></tr>
+<tr><td>14</td><td>Fri 2/17/2023</td><td>The Short-Time Fourier Transform (STFT), Spectrograms</td><td></td><td bgcolor=#f4e6e7>Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties due before class 
+</td></tr>
 <tr><td>15</td><td>Mon 2/20/2023</td><td>Complex Numbers Review, Euler's Formula, Complex Definition of DFT And Phase</td><td></td><td></td></tr>
-<tr><td>16</td><td>Wed 2/22/2023</td><td>Vocoder Concept, Phasors</td><td></td><td></td></tr>
-<tr><td>17</td><td>Fri 2/24/2023</td><td>Phasor Mirroring, Aliasing, Inverse DFT</td><td></td><td></td></tr>
-<tr><td>18</td><td>Mon 2/27/2023</td><td>Convolution/multiplication duality</td><td></td><td></td></tr>
-<tr><td>19</td><td>Wed 3/1/2023</td><td>The Z-Transform, Lowpass Filters / Highpass Filters, frequency analysis of comb filters</td><td></td><td></td></tr>
+<tr><td>16</td><td>Wed 2/22/2023</td><td>Vocoder Concept, Phasors</td><td></td><td bgcolor=#f4e6e7>Module 11: STFT, Window Functions, Complex Numbers due before class 
+</td></tr>
+<tr><td></td><td>Thu 2/23/2023</td><td></td><td></td><td bgcolor=#f4e6e7>Assignment 2 Due
+</td></tr><tr><td>17</td><td>Fri 2/24/2023</td><td>Phasor Mirroring, Aliasing, Inverse DFT</td><td></td><td bgcolor=#f4e6e7>Module 12: Complex DFT And Phasors (Optinal, But Will Help with HW3)
+<HR>Assignment 3: Vocoders And Phase Retrieval Out
+</td></tr>
+<tr><td>18</td><td>Mon 2/27/2023</td><td>Convolution/multiplication duality</td><td></td><td bgcolor=#f4e6e7>Module 14: Convolution And Multiplication Duality due before class 
+</td></tr>
+<tr><td>19</td><td>Wed 3/1/2023</td><td>The Z-Transform, Lowpass Filters / Highpass Filters, frequency analysis of comb filters</td><td></td><td bgcolor=#f4e6e7>Module 15: Z Transform due before class 
+</td></tr>
 <tr><td colspan = "5"><h2><b><a name = "classical">Unit 3: Classical Machine Learning / AI For Digital Music Processing</a></b></h2><p></p></td></tr>
 <tr><td>20</td><td>Fri 3/3/2023</td><td>Rhythm, Beats, And Audio novelty functions</td><td></td><td></td></tr>
-<tr><td>--</td><td>Mon 3/6/2023</td><td>Spring Break</td><td></td><td>No CS 477 Class.  Enjoy the break!</td></tr>
-<tr><td>--</td><td>Wed 3/8/2023</td><td>Spring Break</td><td></td><td>No CS 477 Class.  Enjoy the break!</td></tr>
-<tr><td>--</td><td>Fri 3/10/2023</td><td>Spring Break</td><td></td><td>No CS 477 Class.  Enjoy the break!</td></tr>
+<tr><td>--</td><td>Mon 3/6/2023</td><td>Spring Break</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
+<tr><td>--</td><td>Wed 3/8/2023</td><td>Spring Break</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
+<tr><td>--</td><td>Fri 3/10/2023</td><td>Spring Break</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
 <tr><td>21</td><td>Mon 3/13/2023</td><td>Audio novelty functions And Autocorrelation</td><td></td><td></td></tr>
 <tr><td>22</td><td>Wed 3/15/2023</td><td>Matrix Multiplication, Mel Spacing</td><td></td><td></td></tr>
-<tr><td>23</td><td>Fri 3/17/2023</td><td>MFCC Features, Inverting MFCC</td><td><ul><li><a href = "ClassExercises/Week8/Week8_MFCC/Mel.html">Code from today</a></li></ul></td><td></td></tr>
-<tr><td>24</td><td>Mon 3/20/2023</td><td>Cross-Similarity Matrices, Dynamic Time Warping</td><td></td><td></td></tr>
-<tr><td>25</td><td>Wed 3/22/2023</td><td>Dynamic Time Warping Continued</td><td></td><td></td></tr>
-<tr><td>26</td><td>Fri 3/24/2023</td><td>Chroma Features, Shepard Tones</td><td></td><td></td></tr>
-<tr><td>27</td><td>Mon 3/27/2023</td><td>Audio Fingerprints / The Shazam Algorithm</td><td><ul><li><a href = "https://www.youtube.com/watch?v=puVYtkh-LO4">Cinco Midi Organiser</a></li></td><td></td></tr>
-<tr><td>28</td><td>Wed 3/29/2023</td><td>Harmonic-Percussive Source Separation</td><td></td><td></td></tr>
-<tr><td>29</td><td>Fri 3/31/2023</td><td>Matrix Multiplication for Audio Activations</td><td></td><td></td></tr>
-<tr><td>30</td><td>Mon 4/3/2023</td><td>Source Separation via Nonnegative matrix factorization</td><td><ul><li><a href = "https://papers.nips.cc/paper/2000/file/f9d1152547c0bde01830b7e8bd60024c-Paper.pdf">Original Lee/Seung Paper on NMF</a></li></ul></td><td></td></tr>
-<tr><td colspan = "5"><h2><b><a name = "modern">Unit 4: Classical Machine Learning / AI For Digital Music Processing</a></b></h2><p></p></td></tr>
-<tr><td>31</td><td>Wed 4/5/2023</td><td>Introduction To Neural Networks</td><td></td><td></td></tr>
-<tr><td>32</td><td>Fri 4/7/2023</td><td>Deep Learning</td><td></td><td></td></tr>
+<tr><td>23</td><td>Fri 3/17/2023</td><td>Autotuners</td><td></td><td></td></tr>
+<tr><td>24</td><td>Mon 3/20/2023</td><td>MFCC Features, Inverting MFCC</td><td><ul><li><a href = "ClassExercises/Week8/Week8_MFCC/Mel.html">Code from today</a></li></ul></td><td></td></tr>
+<tr><td>25</td><td>Wed 3/22/2023</td><td>Cross-Similarity Matrices, Dynamic Time Warping</td><td></td><td></td></tr>
+<tr><td>26</td><td>Fri 3/24/2023</td><td>Dynamic Time Warping Continued</td><td></td><td></td></tr>
+<tr><td>27</td><td>Mon 3/27/2023</td><td>Chroma Features, Shepard Tones</td><td></td><td></td></tr>
+<tr><td>28</td><td>Wed 3/29/2023</td><td>Audio Fingerprints / The Shazam Algorithm</td><td><ul><li><a href = "https://www.princeton.edu/~cuff/ele201/files/Wang03-shazam.pdf">The original Shazam Paper</a></li><li><a href = "https://slideslive.com/38917442/characterizing-musical-correlates-of-largescale-discovery-behavior?ref=speaker-19235">Blair Kaneshiro Talk</a></li><li><a href = "https://www.youtube.com/watch?v=puVYtkh-LO4">Cinco Midi Organiser</a></li></td><td></td></tr>
+<tr><td>29</td><td>Fri 3/31/2023</td><td>Harmonic-Percussive Source Separation</td><td></td><td></td></tr>
+<tr><td>30</td><td>Mon 4/3/2023</td><td>Matrix Multiplication for Audio Activations</td><td></td><td></td></tr>
+<tr><td>31</td><td>Wed 4/5/2023</td><td>Source Separation via Nonnegative matrix factorization</td><td><ul><li><a href = "https://papers.nips.cc/paper/2000/file/f9d1152547c0bde01830b7e8bd60024c-Paper.pdf">Original Lee/Seung Paper on NMF</a></li></ul></td><td></td></tr>
+<tr><td>32</td><td>Fri 4/7/2023</td><td>Self-Similarity in Audio</td><td></td><td></td></tr>
+<tr><td colspan = "5"><h2><b><a name = "modern">Unit 4: Modern Machine Learning / AI For Digital Music Processing</a></b></h2><p></p></td></tr>
+<tr><td>33</td><td>Mon 4/10/2023</td><td>Introduction To Neural Networks</td><td></td><td></td></tr>
+<tr><td>34</td><td>Wed 4/12/2023</td><td>Deep Learning</td><td></td><td></td></tr>
+<tr><td>35</td><td>Fri 4/14/2023</td><td>Convolutional Neural Networks</td><td></td><td></td></tr>
 </td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr><!-- End Schedule -->
 
 
@@ -975,10 +998,10 @@
 											</ul>
 										</li>
                                         <li>
-											<span class="opener">Optional Spring 2021 Modules</span>
+											<span class="opener">Pre-Class Modules</span>
 											<ul>
-												<li><a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module0/Part1">Module 0: Warmup</a></li>
 												<li><a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module1/Video0">Module 1: Digital Audio Waveforms, Python Basics</a></a></li>
+												<!--
 												<li><a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module2/Video1">Module 2: Sinusoids And Simple Numpy Tunes</a></li>
 												<li><a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module3/Video0">Module 3: Standing Waves And Plucked String Synthesis</a></li>
 												<li><a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module4/Video1">Module 4: Chirps, Instantaneous Frequency, Vibrato, Sonification</a></li>
@@ -997,6 +1020,7 @@
 												<li><a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module16/Video0">Module 16: Audio Novelty Functions, Tempo Estimation, Matrix Multiplication</a></li>
 												<li><a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module17/Video0">Module 17: Cross-Similarity, Warping Paths, Dynamic Time Warping</a></li>
 												<li><a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module18/Video0">Module 18: Matrix Multiplication for Audio Activations</a></li>
+												!-->
 											</ul>
 										</li>
 									</ul>
