--- a/Software/index.html
+++ b/Software/index.html
@@ -48,13 +48,8 @@
 									</p>
 
 									<p>
-										Once you install Anaconda, you should be able to launch <b>Spyder</b> and <b>Jupyter</b>, which are the two environments we will be using to write and run code.  Under Windows, you can launch these programs by searching for them in the search bar.  Under Mac/Linux, you can run them by typing <code>spyder</code> and <code>jupyter</code>, respectively, in the command prompt.
+										Once you install Anaconda, you should be able to launch <b>Jupyter</b>, which is the environment we will be using to write and run code.  Under Windows, you can launch this by searching for them in the search bar.  Under Mac/Linux, you can run it by typing <code>jupyter</code> in the command prompt.
                                     </p>
-                                    
-                                    <p>
-                                        Below is a picture of what Spyder looks like
-                                    </p>
-                                    <img src = "SpyderScreenshot.png">
 
                                     <p>
                                         Below is a picture of what jupyter looks like
@@ -62,15 +57,11 @@
 
                                     <img src = "JupyterScreen.png">
 
-									<p>
-										Personally, I prefer Jupyter, and this is what we'll be using in class.  But for those who are more used to things like Netbeans, you may prefer Spyder.
-									</p>
-
 
 									<HR>
-										<h2><a name = "preferred">My Preferred Solution: External .py Files Autoreloaded in Jupyter</a></h2>
+										<h2><a name = "autoreload">External .py Files Autoreloaded in Jupyter</a></h2>
 										<p>
-											My personal preferred way to code in python is to have most of my code that's going to be reused in a separate <code>.py</code> file that I import into a jupyter notebook, and I use the jupyter notebook like an extended "main" where I simply run experiments and plot results.  You can make a .py file from within the jupyter interface as follows (or you can use any other text editor such as <a href = "https://code.visualstudio.com/">Visual Studio Code</a> or <a href = "https://atom.io/">Atom</a>, as long as you save it in the same directory as your notebook):
+											In this class, we'll treat jupyer notebooks like an extended "main" with experiments/plots, while the bulk of important methods will go in a separate <code>.py</code> file that we import into a jupyter notebook.  You can make a .py file from within the jupyter interface as follows (or you can use any other text editor such as <a href = "https://code.visualstudio.com/">Visual Studio Code</a> or <a href = "https://atom.io/">Atom</a>, as long as you save it in the same directory as your notebook):
 										</p>
 
 										<img src = "makepy.gif">
@@ -95,48 +86,6 @@
 										<h2><a name = "colab">Google Colab</a></h2>
 										<p>
 											For students who prefer to work on the cloud during class, there is an option similar to repl.it known as <a href = "https://colab.research.google.com">Google Colab</a> that you can use.
-										</p>
-
-
-									<HR>
-										<h2><a name = "pycharm">PyCharm</a></h2>
-										<p>
-											For an option even more like Netbeans, there is <a href = "https://www.jetbrains.com/pycharm/">PyCharm community version</a>.  The first thing you will have to do is install a couple of packages that we'll be using in the class.  Create a script and run the following two lines
-										</p>
-
-										<script type="syntaxhighlighter" class="brush: python"><![CDATA[
-											import subprocess
-											subprocess.call("pip install numpy matplotlib jupyter scikit-image".split())]]></script>  
-
-										<p>
-											Then, to make sure everything is working, run the following code:
-										</p>
-
-										<script type="syntaxhighlighter" class="brush: python"><![CDATA[
-											import numpy as np
-											import matplotlib.pyplot as plt
-											import skimage.io
-
-											t = np.linspace(0, 2*np.pi, 100)
-											X = np.zeros((t.size, 2))
-											X[:, 0] = np.cos(t)
-											X[:, 1] = np.sin(t)
-											plt.scatter(X[:, 0], X[:, 1])
-											plt.axis("equal")
-											plt.savefig("out.png")
-
-											img = skimage.io.imread("out.png")
-											img[:, :, 0] = 0
-											skimage.io.imsave("out.png", img)]]></script> 
-										
-										<p>
-											You should see an image that looks like this:
-										</p>
-
-										<img src = "pycharmtest.png">
-
-										<p>
-											<b>NOTE: </b> Later in the course when we get to trees, I will want everyone to use Jupyter notebook or Google colab to help organize a bunch of plots better, but Pycharm should get you through most of the course
 										</p>
 
 
@@ -247,10 +196,10 @@
 											</ul>
 										</li>
                                         <li>
-											<span class="opener">Optional Spring 2021 Modules</span>
+											<span class="opener">Pre-Class Modules</span>
 											<ul>
-												<li><a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module0/Part1">Module 0: Warmup</a></li>
 												<li><a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module1/Video0">Module 1: Digital Audio Waveforms, Python Basics</a></a></li>
+												<!--
 												<li><a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module2/Video1">Module 2: Sinusoids And Simple Numpy Tunes</a></li>
 												<li><a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module3/Video0">Module 3: Standing Waves And Plucked String Synthesis</a></li>
 												<li><a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module4/Video1">Module 4: Chirps, Instantaneous Frequency, Vibrato, Sonification</a></li>
@@ -269,6 +218,7 @@
 												<li><a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module16/Video0">Module 16: Audio Novelty Functions, Tempo Estimation, Matrix Multiplication</a></li>
 												<li><a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module17/Video0">Module 17: Cross-Similarity, Warping Paths, Dynamic Time Warping</a></li>
 												<li><a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module18/Video0">Module 18: Matrix Multiplication for Audio Activations</a></li>
+												!-->
 											</ul>
 										</li>
 									</ul>
