Syllabus quiz link

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 <!-- Begin Schedule -->
 <tr><td colspan = "5"><h2><b><a name = "timedomain">Unit 1: Time Domain Audio Processing</a></b></h2><p></p></td></tr>
 <tr><td>1</td><td>Wed 1/18/2023</td><td>Course Overview, Sneak Preview, Digital Audio Representations</td><td><ul><li>Audio Reverse Game</li></ul></td><td></td></tr>
-<tr><td></td><td>Thu 1/19/2023</td><td></td><td></td><td bgcolor=#f4e6e7><a href = "Assignments/Survey">Survey</a> and syllabus quiz due by 11:59PM
+<tr><td></td><td>Thu 1/19/2023</td><td></td><td></td><td bgcolor=#f4e6e7><a href = "Assignments/Survey">Survey</a> and <a href = "https://ursinus.instructure.com/courses/15546/quizzes/21549">syllabus quiz</a> due by 11:59PM
 </td></tr><tr><td>2</td><td>Fri 1/20/2023</td><td>Python/Numpy Basics, Slicing/Reversing Audio, Sinusoids/Pitch</td><td><ul><a href = "https://donsheehy.github.io/datastructures/fullbook.pdf">Sheehy</a> Ch. 2 for python intro</li></ul></td><td bgcolor=#f4e6e7>Module 1: Python Basics Due by 11:59 PM
 </td></tr>
 <tr><td>3</td><td>Mon 1/23/2023</td><td>Square Waves, Triangle Waves, Sawtooth Waves, Noise, Beat Frequencies</td><td></td><td bgcolor=#f4e6e7>Module 2: Sinusoids And Simple Numpy Tunes Due Before Class
@@ -518,7 +518,7 @@
 <tr><td>36</td><td>Mon 4/17/2023</td><td>Deep beat tracking</td><td><ul><li><a href = "https://ofai.at/~jan.schlueter/pubs/2014_icassp.pdf">Schlüter/Böck 2014: "Improved Musical Onset Detection with Convolutional Neural Networks</a></li><li><a href = "https://www.eurasip.org/Proceedings/Eusipco/eusipco2019/Proceedings/papers/1570533824.pdf">Davies/Böck 2019: Temporal Convolutional Neural Networks for Musical Audio Beat Tracking</a></li></ul></td><td></td></tr>
 <tr><td>--</td><td>Wed 4/19/2023</td><td>COSA Day</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
 <tr><td>37</td><td>Fri 4/21/2023</td><td>Deep beat tracking continued</td><td></td><td></td></tr>
-<tr><td>38</td><td>Mon 4/24/2023</td><td>Wave-U-Net Part 1</td><td></td><td></td></tr>
+<tr><td>38</td><td>Mon 4/24/2023</td><td>Wave-U-Net for Source Separation</td><td><ul><li><a href = "https://arxiv.org/pdf/1806.03185.pdf">Wave-U-Net Paper</a></li></ul></td><td></td></tr>
 <tr><td>39</td><td>Wed 4/26/2023</td><td>Music Enhancement</td><td></td><td></td></tr>
 </td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr><!-- End Schedule -->
 
