--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 
 <!-- Begin Schedule -->
 <tr><td colspan = "5"><h2><b><a name = "timedomain">Unit 1: Time Domain Audio Processing</a></b></h2><p></p></td></tr>
-<tr><td>1</td><td>Wed 1/18/2023</td><td>Course Overview, Sneak Preview, Digital Audio Representations</td><td><ul><li>Audio Reverse Game</li></ul></td><td></td></tr>
+<tr><td>1</td><td>Wed 1/18/2023</td><td>Course Overview, Sneak Preview, Digital Audio Representations</td><td><ul><li><a href = "ClassExercises/Week1/Week1_AudioReverseGame">Audio Reverse Game</a></li></ul></td><td></td></tr>
 <tr><td></td><td>Thu 1/19/2023</td><td></td><td></td><td bgcolor=#f4e6e7><a href = "Assignments/Survey">Survey</a> and <a href = "https://ursinus.instructure.com/courses/15546/quizzes/21549">syllabus quiz</a> due by 11:59PM
 </td></tr><tr><td>2</td><td>Fri 1/20/2023</td><td>Python/Numpy Basics, Slicing/Reversing Audio, Sinusoids/Pitch</td><td><ul><a href = "https://donsheehy.github.io/datastructures/fullbook.pdf">Sheehy</a> Ch. 2 for python intro</li></ul></td><td bgcolor=#f4e6e7>Module 1: Python Basics Due by 11:59 PM
 </td></tr>
@@ -518,8 +518,9 @@
 <tr><td>36</td><td>Mon 4/17/2023</td><td>Deep beat tracking</td><td><ul><li><a href = "https://ofai.at/~jan.schlueter/pubs/2014_icassp.pdf">Schlüter/Böck 2014: "Improved Musical Onset Detection with Convolutional Neural Networks</a></li><li><a href = "https://www.eurasip.org/Proceedings/Eusipco/eusipco2019/Proceedings/papers/1570533824.pdf">Davies/Böck 2019: Temporal Convolutional Neural Networks for Musical Audio Beat Tracking</a></li></ul></td><td></td></tr>
 <tr><td>--</td><td>Wed 4/19/2023</td><td>COSA Day</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
 <tr><td>37</td><td>Fri 4/21/2023</td><td>Deep beat tracking continued</td><td></td><td></td></tr>
-<tr><td>38</td><td>Mon 4/24/2023</td><td>Wave-U-Net for Source Separation</td><td><ul><li><a href = "https://arxiv.org/pdf/1806.03185.pdf">Wave-U-Net Paper</a></li></ul></td><td></td></tr>
-<tr><td>39</td><td>Wed 4/26/2023</td><td>Music Enhancement</td><td></td><td></td></tr>
+<tr><td>38</td><td>Mon 4/24/2023</td><td>Wavenet</td><td></td><td></td></tr>
+<tr><td>39</td><td>Wed 4/26/2023</td><td>Wave-U-Net for Source Separation</td><td><ul><li><a href = "https://arxiv.org/pdf/1806.03185.pdf">Wave-U-Net Paper</a></li></ul></td><td></td></tr>
+<tr><td>40</td><td>Fri 4/28/2023</td><td>Music Enhancement</td><td></td><td></td></tr>
 </td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr><!-- End Schedule -->
 
 
@@ -982,7 +983,8 @@
 										<li>
 											<span class="opener">Class Exercises</span>
 											<ul>
-												<!--<li><a href = "https://ursinus-cs472a-s2021.github.io/Week1_AudioReverseGame/">Week 1: Audio Reverse Game</a></li>
+												<li><a href = "ClassExercises/Week1/Week1_AudioReverseGame/">Week 1: Audio Reverse Game</a></li>
+												<!--<
 												<li><a href = "ClassExercises/Week2/Week2_BeatPhase/index.html">Week 2: Beat Phase</a></li>
 												<li><a href = "ClassExercises/Week2/Week2_Harmonicity/index.html">Week 2: Harmonicity</a></li>
 												<li><a href = "ClassExercises/Week3/Week3_ZCS_Loudness/index.html">Week 3: Zero Crossings And Loudness Perception</a></li>
