--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 <tr><td></td><td>Thu 1/19/2023</td><td></td><td></td><td bgcolor=#f4e6e7><a href = "Assignments/Survey">Survey</a> and <a href = "https://ursinus.instructure.com/courses/15546/quizzes/21549">syllabus quiz</a> due by 11:59PM
 </td></tr><tr><td>2</td><td>Fri 1/20/2023</td><td>Python/Numpy Basics, Slicing/Reversing Audio, Sinusoids/Pitch</td><td><ul><a href = "https://donsheehy.github.io/datastructures/fullbook.pdf">Sheehy</a> Ch. 2 for python intro</li></ul></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module1/Video0">Module 1: Python Basics</a> Due by 11:59 PM
 </td></tr>
-<tr><td>3</td><td>Mon 1/23/2023</td><td>Square Waves, Triangle Waves, Sawtooth Waves, Noise, Beat Frequencies</td><td></td><td bgcolor=#f4e6e7>Module 2: Sinusoids And Simple Numpy Tunes Due Before Class
+<tr><td>3</td><td>Mon 1/23/2023</td><td>Square Waves, Triangle Waves, Sawtooth Waves, Noise, Beat Frequencies</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module2/Video1">Module 2: Sinusoids And Simple Numpy Tunes</a> Due Before Class
 <HR>Assignment 1: Risset Beats Out
 </td></tr>
 <tr><td>4</td><td>Wed 1/25/2023</td><td>Octaves, Harmonicity, Circle of Fifths / Pythagorean Tuning</td><td><ul><li><a href = "ClassExercises/Week2/Week2_Harmonicity">Harmonicity Notes</a></li><li><a href = "https://en.wikipedia.org/wiki/Pythagorean_comma">Wikipedia Notes on The Pythagorean Comma</a></li></ul></td><td bgcolor=#f4e6e7>Module 3: Standing Waves And Plucked String Synthesis Due Before Class 
@@ -1012,8 +1012,8 @@
 											<span class="opener">Pre-Class Modules</span>
 											<ul>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module1/Video0">Module 1: Digital Audio Waveforms, Python Basics</a></a></li>
-												<!--
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module2/Video1">Module 2: Sinusoids And Simple Numpy Tunes</a></li>
+												<!--
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module3/Video0">Module 3: Standing Waves And Plucked String Synthesis</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module4/Video1">Module 4: Chirps, Instantaneous Frequency, Vibrato, Sonification</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module5/Video1">Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics</a></li>
