--- a/index.html
+++ b/index.html
@@ -458,9 +458,9 @@
 </td></tr><tr><td>2</td><td>Fri 1/20/2023</td><td>Python/Numpy Basics, Slicing/Reversing Audio, Sinusoids/Pitch</td><td><ul><a href = "https://donsheehy.github.io/datastructures/fullbook.pdf">Sheehy</a> Ch. 2 for python intro</li></ul></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module1/Video0">Module 1: Python Basics</a> Due by 11:59 PM
 </td></tr>
 <tr><td>3</td><td>Mon 1/23/2023</td><td>Square Waves, Triangle Waves, Sawtooth Waves, Noise, Beat Frequencies</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module2/Video1">Module 2: Sinusoids And Simple Numpy Tunes</a> Due Before Class
-<HR>Assignment 1: Risset Beats Out
+<HR><a href = "Assignments/HW1_RissetBeats">Assignment 1: Risset Beats</a> Out
 </td></tr>
-<tr><td>4</td><td>Wed 1/25/2023</td><td>Octaves, Harmonicity, Circle of Fifths / Pythagorean Tuning</td><td><ul><li><a href = "ClassExercises/Week2/Week2_Harmonicity">Harmonicity Notes</a></li><li><a href = "https://en.wikipedia.org/wiki/Pythagorean_comma">Wikipedia Notes on The Pythagorean Comma</a></li></ul></td><td bgcolor=#f4e6e7>Module 3: Standing Waves And Plucked String Synthesis Due Before Class 
+<tr><td>4</td><td>Wed 1/25/2023</td><td>Octaves, Harmonicity, Circle of Fifths / Pythagorean Tuning</td><td><ul><li><a href = "ClassExercises/Week2/Week2_Harmonicity">Harmonicity Notes</a></li><li><a href = "https://en.wikipedia.org/wiki/Pythagorean_comma">Wikipedia Notes on The Pythagorean Comma</a></li></ul></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module3/Video0">Module 3: Standing Waves And Plucked String Synthesis</a> Due Before Class 
 </td></tr>
 <tr><td>5</td><td>Fri 1/27/2023</td><td>Finish Pythagorean Tuning, Chirps, Vibrato, Frequency Sonification</td><td></td><td bgcolor=#f4e6e7>Module 4: Chirps, Instantaneous Frequency due before class 
 </td></tr>
@@ -939,14 +939,10 @@
                                         <li>
 											<span class="opener">Assignments</span>
 											<ul>
-												<!--<li>
+												<li>
 													<a href = "Assignments/HW1_RissetBeats">HW1: Risset Beats</a>
-													<ul>
-														<li>
-															<a href = "Assignments/HW1_RissetBeats/statements.html">Musical Statements</a>
-														</li>
-													</ul>
 												</li>
+												<!--
 												<li><a href = "Assignments/HW2_DigitalInstruments">HW2: Digital Instruments</a>
 									
 													<ul>
@@ -985,8 +981,8 @@
 											<span class="opener">Class Exercises</span>
 											<ul>
 												<li><a href = "ClassExercises/Week1/Week1_AudioReverseGame/">Week 1: Audio Reverse Game</a></li>
-												<!--<
 												<li><a href = "ClassExercises/Week2/Week2_BeatPhase/index.html">Week 2: Beat Phase</a></li>
+												<!--
 												<li><a href = "ClassExercises/Week2/Week2_Harmonicity/index.html">Week 2: Harmonicity</a></li>
 												<li><a href = "ClassExercises/Week3/Week3_ZCS_Loudness/index.html">Week 3: Zero Crossings And Loudness Perception</a></li>
 												<li><a href = "ClassExercises/Week3/Week3_Timbre/index.html">Week 3: Harmonics And Timbre</a></li>
@@ -1013,8 +1009,8 @@
 											<ul>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module1/Video0">Module 1: Digital Audio Waveforms, Python Basics</a></a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module2/Video1">Module 2: Sinusoids And Simple Numpy Tunes</a></li>
-												<!--
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module3/Video0">Module 3: Standing Waves And Plucked String Synthesis</a></li>
+												<!--
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module4/Video1">Module 4: Chirps, Instantaneous Frequency, Vibrato, Sonification</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module5/Video1">Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module6/Video0">Module 6: Timbre, FM Synthesis, Python Methods As Parameters</a></li>
